--- a/principal.html
+++ b/principal.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/principal.css">
- 
+    <script type="module" src="js/principal.js"></script>
 </head>
 
 <body>
@@ -29,7 +29,7 @@
             <a href="#" class="list-group-item list-group-item-action active">Home</a>
             <a href="#" class="list-group-item list-group-item-action">Ver mascotas</a>
             <a href="#" class="list-group-item list-group-item-action">Hacer donación</a>
-            <a href="#" class="list-group-item list-group-item-action">Cerrar sesión</a>
+            <a href="#" id="logout" class="list-group-item list-group-item-action">Cerrar sesión</a>
 
         </div>
 
